Horizontal Scroll Fix

--- a/css/style.css
+++ b/css/style.css
@@ -1156,7 +1156,7 @@ canvas {
 }
 
 .main-header {
-  max-width: 100%;
+  max-width: 100vw;
   height: 75px;
   display: flex;
   background-color: #8674b5;
@@ -1276,7 +1276,7 @@ canvas {
 }
 @media (min-width: 768px) {
   .main-header h2 {
-    flex: 0 0 15%;
+    flex: 0 0 12%;
   }
 }
 
@@ -1386,7 +1386,7 @@ a svg {
 }
 @media (min-width: 1024px) {
   .main-header-search {
-    flex: 1 0 85%;
+    flex: 1 0 75%;
   }
 }
 
