--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .main-header {
-    max-width: 100%;
+    max-width: 100vw;
     height: 75px;
     display: flex;
     background-color: $color-primary;
@@ -115,7 +115,7 @@
     font-size: .7rem;
     font-weight: 200;
     @include for-md-screen {
-        flex: 0 0 15%;
+        flex: 0 0 12%;
     }
 }
 
