--- a/scss/components/_widgets.scss
+++ b/scss/components/_widgets.scss
@@ -60,7 +60,7 @@
 .main-header-search {
     flex: 0 1 67%;
     @include for-lg-screen {
-        flex: 1 0 85%;
+        flex: 1 0 75%;
     }
 }
 
